<resources>
    <string name="app_name" translatable="false">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="decrement_button" translatable="false">-</string>
    <string name="quantity_value" translatable="false">2</string>
    <string name="increment_button" translatable="false">+</string>
    <string name="order_summary">Order Summary</string>
    <string name="total_price">Place Your Order to Know Price</string>
    <string name="order_button">Order</string>
    <string name="toppings1">Whipped Cream</string>
    <string name="toppings">Toppings</string>
    <string name="toppings2">Chocolate</string>
    <string name="name">Name</string>
    <string name="thanku">Thank You!</string>
</resources>
